2010-04-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam.conf-syntax.xml: Better documentation of
	"actionN". Patch from Michal Soltys <soltys@ziu.info>.

2010-04-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_rootok/pam_rootok.c: Add support for acct_mgmt
	and chauthtok.
	* modules/pam_rootok/pam_rootok.8.xml: Document new module
	types.

2010-03-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/ar.po: Add missing Plural-Forms entry to header.

2010-03-25  Daniel Nylander <po@danielnylander.se>

	* po/sv.po: Updated translations.

2010-03-24  Ani Peter  <anipeter@fedoraproject.org>

	* po/ml.po: Updated translations.

2010-03-08  Yuri Chornoivan  <yurchor@ukr.net>

	* po/uk.po: Updated translations.

2010-02-09  Tomas Mraz  <t8m@centrum.cz>

	* libpam/pam_get_authtok.c (pam_get_authtok_internal): Fix
	regression in the new password prompt.

2010-01-04  Elad <el.il@doom.co.il>

	* po/he.po: New translation to Hebrew.
	* po/LINGUAS: Add Hebrew to the list.

2009-12-16  Thorsten Kukuk  <kukuk@suse.de>

	* release version 1.1.1

	* NEWS: Adjust for 1.1.1
	* configure.in: Likewise.
	* doc/adg/Linux-PAM_ADG.xml: Likewise.
	* doc/mwg/Linux-PAM_MWG.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Likewise.
	* po/*.po: Regenerated.

2009-12-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Rename DEBUG to PAM_DEBUG.
	* libpam/pam_env.c: Likewise
	* libpam/pam_handlers.c: Likewise
	* libpam/pam_miscc.c: Likewise
	* libpam/pam_password.c: Likewise
	* libpam/include/security/_pam_macros.h: Likewise
	* libpamc/test/modules/pam_secret.c: Likewise
	* modules/pam_group/pam_group.c: Likewise
	* modules/pam_listfile/pam_listfile.c: Likewise
	* modules/pam_unix/pam_unix_auth.c: Likewise
	* modules/pam_unix/pam_unix_passwd.c: Likewise

2009-12-08  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/passverify.c(unix_update_shadow): Create a shadow
	entry if not present in the file.

	* modules/pam_listfile/pam_listfile.c(pam_sm_authenticate): Remove